@@ -20,11 +20,14 @@ import io.ballerina.compiler.api.symbols.TypeDescKind;
 import io.ballerina.compiler.api.symbols.TypeSymbol;
 import io.ballerina.compiler.syntax.tree.BasicLiteralNode;
 import io.ballerina.compiler.syntax.tree.BinaryExpressionNode;
+import io.ballerina.compiler.syntax.tree.ConstantDeclarationNode;
 import io.ballerina.compiler.syntax.tree.ImportDeclarationNode;
+import io.ballerina.compiler.syntax.tree.ModuleMemberDeclarationNode;
 import io.ballerina.compiler.syntax.tree.ModulePartNode;
 import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.NodeList;
 import io.ballerina.compiler.syntax.tree.NodeVisitor;
+import io.ballerina.compiler.syntax.tree.StatementNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
 import io.ballerina.compiler.syntax.tree.UnaryExpressionNode;
 import io.ballerina.tools.text.LineRange;
@@ -35,15 +38,19 @@ import org.ballerinalang.langserver.common.constants.CommandConstants;
 import org.ballerinalang.langserver.common.utils.NameUtil;
 import org.ballerinalang.langserver.common.utils.PositionUtil;
 import org.ballerinalang.langserver.commons.CodeActionContext;
+import org.ballerinalang.langserver.commons.capability.LSClientCapabilities;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedCodeActionProvider;
 import org.ballerinalang.langserver.commons.codeaction.spi.RangeBasedPositionDetails;
 import org.eclipse.lsp4j.CodeAction;
 import org.eclipse.lsp4j.CodeActionKind;
+import org.eclipse.lsp4j.Command;
 import org.eclipse.lsp4j.Position;
 import org.eclipse.lsp4j.Range;
 import org.eclipse.lsp4j.TextEdit;
 
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -57,8 +64,9 @@ import java.util.stream.Collectors;
 @JavaSPIService("org.ballerinalang.langserver.commons.codeaction.spi.LSCodeActionProvider")
 public class ExtractToConstantCodeAction implements RangeBasedCodeActionProvider {
 
-    public static final String NAME = "Extract To Constant";
+    public static final String NAME = "extract to constant";
     private static final String CONSTANT_NAME_PREFIX = "CONST";
+    private static final String EXTRACT_COMMAND = "ballerina.action.extract";
 
     public List<SyntaxKind> getSyntaxKinds() {
         return List.of(SyntaxKind.BOOLEAN_LITERAL, SyntaxKind.NUMERIC_LITERAL,
@@ -69,11 +77,9 @@ public class ExtractToConstantCodeAction implements RangeBasedCodeActionProvider
     public boolean validate(CodeActionContext context, RangeBasedPositionDetails positionDetails) {
         Node node = positionDetails.matchedCodeActionNode();
         SyntaxKind parentKind = node.parent().kind();
-        return  context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent() 
-                && parentKind != SyntaxKind.CONST_DECLARATION 
+        return context.currentSyntaxTree().isPresent() && context.currentSemanticModel().isPresent()
+                && parentKind != SyntaxKind.CONST_DECLARATION
                 && parentKind != SyntaxKind.INVALID_EXPRESSION_STATEMENT
-                && parentKind != SyntaxKind.CLIENT_DECLARATION 
-                && parentKind != SyntaxKind.MODULE_CLIENT_DECLARATION
                 && CodeActionNodeValidator.validate(context.nodeAtRange());
     }
 
@@ -82,31 +88,61 @@ public class ExtractToConstantCodeAction implements RangeBasedCodeActionProvider
      */
     @Override
     public List<CodeAction> getCodeActions(CodeActionContext context,
-                                                    RangeBasedPositionDetails posDetails) {
-        
+                                           RangeBasedPositionDetails posDetails) {
+
         Node node = posDetails.matchedCodeActionNode();
         BasicLiteralNodeValidator nodeValidator = new BasicLiteralNodeValidator();
         node.accept(nodeValidator);
         if (nodeValidator.getInvalidNode()) {
             return Collections.emptyList();
         }
-        
-        String constName = getLocalVarName(context);
-        String value = node.toSourceCode().strip();
-        LineRange replaceRange = node.lineRange();
+
+        String constName = getConstantName(context);
         Optional<TypeSymbol> typeSymbol = context.currentSemanticModel().get().typeOf(node);
         if (typeSymbol.isEmpty() || typeSymbol.get().typeKind() == TypeDescKind.COMPILATION_ERROR) {
             return Collections.emptyList();
         }
-        
-        Position constDeclPosition = getPosition(context);
-        String constDeclStr = String.format("const %s %s = %s;%n", typeSymbol.get().signature(), constName, value);
-        TextEdit constDeclEdit = new TextEdit(new Range(constDeclPosition, constDeclPosition), constDeclStr);
-        TextEdit replaceEdit = new TextEdit(new Range(PositionUtil.toPosition(replaceRange.startLine()),
-                PositionUtil.toPosition(replaceRange.endLine())),  constName);
+        ConstantData constantData = getConstantData(context);
+        Position constDeclPosition = constantData.getPosition();
+        boolean addNewLineAtStart = constantData.isAddNewLineAtStart();
 
-        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_CONSTANT, 
-                List.of(constDeclEdit, replaceEdit), context.fileUri(), CodeActionKind.RefactorExtract));
+        // Check if the selection is a range or a position, and whether quick picks are supported by the client
+        LSClientCapabilities lsClientCapabilities = context.languageServercontext().get(LSClientCapabilities.class);
+        if (isRange(context.range()) || !lsClientCapabilities.getInitializationOptions().isQuickPickSupported()) {
+
+            // Selection is a range
+            List<TextEdit> textEdits =
+                    getTextEdits(node, typeSymbol.get(), constName, constDeclPosition, addNewLineAtStart);
+            return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_CONSTANT,
+                    textEdits, context.fileUri(), CodeActionKind.RefactorExtract));
+        }
+
+        // Selection is a position
+        List<Node> nodeList = getPossibleExpressionNodes(node, nodeValidator);
+        LinkedHashMap<String, List<TextEdit>> textEditMap = new LinkedHashMap<>();
+
+        nodeList.forEach(extractableNode -> textEditMap.put(extractableNode.toSourceCode().strip(),
+                getTextEdits(extractableNode, typeSymbol.get(), constName, constDeclPosition, addNewLineAtStart)));
+
+        return Collections.singletonList(CodeActionUtil.createCodeAction(CommandConstants.EXTRACT_TO_CONSTANT,
+                new Command(NAME, EXTRACT_COMMAND, List.of(NAME, context.filePath().toString(),
+                        textEditMap)), CodeActionKind.RefactorExtract));
+    }
+
+    private List<Node> getPossibleExpressionNodes(Node node, BasicLiteralNodeValidator nodeValidator) {
+        // Identify the sub-expressions to be extracted
+        List<Node> nodeList = new ArrayList<>();
+        while (node != null && !isExpressionNode(node) && node.kind() != SyntaxKind.OBJECT_FIELD
+                && !nodeValidator.getInvalidNode()) {
+            nodeList.add(node);
+            node = node.parent();
+            node.accept(nodeValidator);
+        }
+        return nodeList;
+    }
+
+    private boolean isExpressionNode(Node node) {
+        return node instanceof StatementNode || node instanceof ModuleMemberDeclarationNode;
     }
 
     @Override
@@ -114,7 +150,27 @@ public class ExtractToConstantCodeAction implements RangeBasedCodeActionProvider
         return NAME;
     }
 
-    private String getLocalVarName(CodeActionContext context) {
+    private List<TextEdit> getTextEdits(Node node, TypeSymbol typeSymbol, String constName, Position constDeclPos,
+                                        boolean newLineAtStart) {
+        String value = node.toSourceCode().strip();
+        LineRange replaceRange = node.lineRange();
+        String constDeclStr = "";
+        if (newLineAtStart) {
+            constDeclStr += String.format("%n");
+        }
+        constDeclStr = String.format(constDeclStr + "const %s %s = %s;%n", typeSymbol.signature(), constName, value);
+
+        TextEdit constDeclEdit = new TextEdit(new Range(constDeclPos, constDeclPos), constDeclStr);
+        TextEdit replaceEdit = new TextEdit(new Range(PositionUtil.toPosition(replaceRange.startLine()),
+                PositionUtil.toPosition(replaceRange.endLine())), constName);
+        return List.of(constDeclEdit, replaceEdit);
+    }
+
+    private static boolean isRange(Range range) {
+        return !range.getStart().equals(range.getEnd());
+    }
+
+    private String getConstantName(CodeActionContext context) {
         Position pos = context.range().getEnd();
         Set<String> allNames = context.visibleSymbols(new Position(pos.getLine(), pos.getCharacter())).stream()
                 .map(Symbol::getName)
@@ -125,15 +181,29 @@ public class ExtractToConstantCodeAction implements RangeBasedCodeActionProvider
         return NameUtil.generateTypeName(CONSTANT_NAME_PREFIX, allNames);
     }
 
-    private Position getPosition(CodeActionContext context) {
+    private ConstantData getConstantData(CodeActionContext context) {
         ModulePartNode modulePartNode = context.currentSyntaxTree().get().rootNode();
         NodeList<ImportDeclarationNode> importsList = modulePartNode.imports();
-        
-        if (importsList.isEmpty()) {
-            return PositionUtil.toPosition(modulePartNode.lineRange().startLine());
+
+        ConstantDeclarationNode declarationNode = null;
+        for (Node node : modulePartNode.children()) {
+            if (node.kind() == SyntaxKind.CONST_DECLARATION) {
+                declarationNode = (ConstantDeclarationNode) node;
+                break;
+            }
         }
-        ImportDeclarationNode lastImport = importsList.get(importsList.size() - 1);
-        return new Position(lastImport.lineRange().endLine().line() + 2, 0);
+
+        if (importsList.isEmpty()) {
+            return new ConstantData(
+                    PositionUtil.toPosition(modulePartNode.lineRange().startLine()), false);
+        } else if (declarationNode == null) {
+            ImportDeclarationNode lastImport = importsList.get(importsList.size() - 1);
+            return new ConstantData(
+                    new Position(lastImport.lineRange().endLine().line() + 1, 0), true);
+        } else {
+            return new ConstantData(new Position(declarationNode.lineRange().startLine().line(), 0),
+                    !declarationNode.toString().startsWith(System.lineSeparator()));
+        }
     }
 
     /**
@@ -164,6 +234,24 @@ public class ExtractToConstantCodeAction implements RangeBasedCodeActionProvider
 
         public Boolean getInvalidNode() {
             return invalidNode;
+        }
+    }
+
+    private static class ConstantData {
+        Position position;
+        boolean addNewLineAtStart;
+
+        public ConstantData(Position position, boolean addNewLineAtStart) {
+            this.position = position;
+            this.addNewLineAtStart = addNewLineAtStart;
+        }
+
+        public Position getPosition() {
+            return position;
+        }
+
+        public boolean isAddNewLineAtStart() {
+            return addNewLineAtStart;
         }
     }
 }
